--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ts-practice",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "run.ts",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch . --ext ts --exec \"node --import ./register-loader.js run.ts\""
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,8 @@
   "devDependencies": {
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.10"
   }
 }
